--- a/index.html
+++ b/index.html
@@ -2,8 +2,13 @@
 <html>
 <head>
 	<title>this Promise</title>
+	<link rel="stylesheet" type="text/css" href="./lib/bower_components/bootstrap/dist/css/bootstrap.css">
+  <link rel="stylesheet" type="text/css" href="./styles/main.css">
 </head>
 <body>
 
+<script type="text/javascript" src="./lib/bower_components/jquery/dist/jquery.js"></script>
+<script type="text/javascript" src="./lib/bower_components/bootstrap/dist/js/bootstrap.js"></script>
+<script type="text/javascript" src="./javascript/main.js"></script>
 </body>
 </html>
