--- a/index.html
+++ b/index.html
@@ -3,9 +3,11 @@
 <head>
 	<title>this Promise</title>
 	<link rel="stylesheet" type="text/css" href="./lib/bower_components/bootstrap/dist/css/bootstrap.css">
-  <link rel="stylesheet" type="text/css" href="./styles/main.css">
+  <link rel="stylesheet" type="text/css" href="./styles.css">
 </head>
 <body>
+
+<button type="button" id="my-button" class="btn btn-default">Button</button>
 
 <script type="text/javascript" src="./lib/bower_components/jquery/dist/jquery.js"></script>
 <script type="text/javascript" src="./lib/bower_components/bootstrap/dist/js/bootstrap.js"></script>
