adding db jsons

--- a/index.html
+++ b/index.html
@@ -7,10 +7,11 @@
 </head>
 <body>
 
-<button type="button" id="my-button" class="btn btn-default">Button</button>
+<button type="button" id="my-button"class="btn btn-default">Button</button>
 
 <script type="text/javascript" src="./lib/bower_components/jquery/dist/jquery.js"></script>
 <script type="text/javascript" src="./lib/bower_components/bootstrap/dist/js/bootstrap.js"></script>
 <script type="text/javascript" src="./javascript/main.js"></script>
+<script type="text/javascript" src="./javascript/promise.js"></script>
 </body>
 </html>
