--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <link rel="stylesheet" type="text/css" href="./styles.css">
 </head>
 <body>
+<div id="promises" class="container"></div>
 
 <button type="button" id="my-button"class="btn btn-default">Button</button>
 
